@@ -457,3 +457,16 @@ uclaim:
   ban: '&4You cannot ban members of your own team from your claim'
   dissolve: '&4Your team has been disbanded so your claim has been dissolved'
   team: '&4You must be in a team to create a claim'
+loading: &6讀取中'
+rank.infomm: '&6公會: &b%s &7(你已經是最高等級了)'
+title.remove: '&6你的頭銜已被移除'
+title.noPerm: '&4你沒有更改公會頭銜的權限'
+promote.maxAdmins: '&4你公會的管理員已經夠多了,請先移除掉一些管理員'
+promote.maxOwners: '&4你公會的會長已經夠多了,請先移除掉一些會長'
+demote.maxAdmins: '&4你公會的管理員已經夠多了,請先移除掉一些管理員'
+deposit.max: '&4數額已超過你公會允許的上限'
+ally.alreadyrequest: '&4你已向該公會提交盟友申請'
+admin.cancel: '&4指令已被其他插件取消'
+admin.demote.maxAdmins: '&4該公會的管理員已經夠多了,請先移除掉一些管理員'
+admin.promote.maxAdmins: '&4該公會的管理員已經夠多了,請先移除掉一些管理員'
+admin.promote.maxOwners: '&4該公會的會長已經夠多了,請先移除掉一些會長'
