@@ -476,6 +476,7 @@ Improvements
 - Improved the output of /teama version to include more information (#296)
 - Added placeholder %betterteams_inteam% to identify if a player is in a team (#290) 
 - Added consistency on prefixing ally chat and team chat (#268)
+- Added some missing Traditional Chinese messages (credit: 花圃中的人偶)
 
 Bug Fixes: 
 - Fixed bug with players getting kicked out of teams when running /teama create (#292)
@@ -483,6 +484,8 @@ Bug Fixes:
 - Fixed bug causing NoSuchMethod error with "@" in commands (#287)
 - Fixed bug causing rebuildLookups to not work as expected (#286)
 - Fixed bug and documentation with autoPurge (#285)
+- Fixed typo in Polish Translations (credit: Duplon)
+- Fixed typo in config.yml (credit: SecretAgent002)
 
 TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
 
